# qa_guru_python18_hw16

proj16_with_poetry/: pyproject.toml
