[project]
name = "proj16-with-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Victoria Kireitseva",email = "victoria.kireitseva@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pytest (==8.3.5)",
    "selene (==2.0.0rc2)"
]

[tool.poetry]
packages = [{include = "proj16_with_poetry", from = "src"}]


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
